--- a/.github/workflows/compute_task1_score.yaml
+++ b/.github/workflows/compute_task1_score.yaml
@@ -1,14 +1,11 @@
 name: Compute task1 score
-
 on: [push]
-
 jobs:
   evaluate:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.8]
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -17,12 +14,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest numpy
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -m pip install pip
+          python -m pip install flake8 pytest numpy
+          if [ -f requirements.txt ]; then python -m pip install -r requirements.txt; fi
       - name: Install task1 package
         run: |
-          pip install -e task1/
-      - name: COMPUTE SCORE
+          python -m pip install -e task1/
+      - name: Compute task1 score
         run: |
           python -m course_ocr_t1.metrics ${{ github.actor }}
